test/fixtures/vm/vm_display_syntax_error.snapshot
beginning
foo.vm:1
var 4;
    ^

SyntaxError: Unexpected number
    at <node-internal-frames>
    at Object.<anonymous> (<project-root>/test/fixtures/vm/vm_display_syntax_error.js:31:6)
test.vm:1
var 5;
    ^

SyntaxError: Unexpected number
    at <node-internal-frames>
    at Object.<anonymous> (<project-root>/test/fixtures/vm/vm_display_syntax_error.js:36:4)

Node.js <node-version>
